Created basic JavaFX project. Make sure it runs on your machine properly.